--- a/index.html
+++ b/index.html
@@ -125,7 +125,7 @@
 </head>
 <body>
 
-    <h1>NAZUNA ENGEKI 5th Anniversary 動画公開サイト</h1>
+    <h1>利用規約への同意及び情報入力</h1>
 
     <div class="terms-box" id="terms-container">
         <h2>利用規約</h2>
