--- a/index.html
+++ b/index.html
@@ -170,12 +170,12 @@
                 </div>
                 <div class="form-group">
                     <label for="class">組</label>
-                    <input type="text" id="class" name="class" required placeholder="例: A">
+                    <input type="text" id="class" name="class" required placeholder="例: 5">
                 </div>
             </div>
             <div class="form-group">
                 <label for="name">名前</label>
-                <input type="text" id="name" name="name" required placeholder="例: 鈴木 一郎">
+                <input type="text" id="name" name="name" required placeholder="例: 山田 太郎">
             </div>
             <div class="form-group">
                 <label for="email">メールアドレス</label>
