--- a/tools.html
+++ b/tools.html
@@ -168,7 +168,7 @@
             <h2>工具貸出管理システム 利用規約</h2>
             <p><strong>制定日: 2025年8月12日</strong></p>
             <p>
-                本利用規約（以下<strong>「本規約」</strong>といいます。）は、[あなたの名前またはチーム名]（以下<strong>「当方」</strong>といいます。）が提供する「工具貸出管理システム」（以下<strong>「本システム」</strong>といいます。）の利用に関する条件を定めるものです。本システムの利用者（以下<strong>「利用者」</strong>といいます。）は、本システムの利用を開始する前に、本規約の全文を注意深くお読みいただき、その内容に完全に同意いただく必要があります。利用者が本システムを利用した場合、本規約の全条項に同意したものとみなします。
+                本利用規約（以下<strong>「本規約」</strong>といいます。）は、金駿翔（以下<strong>「当方」</strong>といいます。）が提供する「工具貸出管理システム」（以下<strong>「本システム」</strong>といいます。）の利用に関する条件を定めるものです。本システムの利用者（以下<strong>「利用者」</strong>といいます。）は、本システムの利用を開始する前に、本規約の全文を注意深くお読みいただき、その内容に完全に同意いただく必要があります。利用者が本システムを利用した場合、本規約の全条項に同意したものとみなします。
             </p>
             <h3>第1条（総則）</h3>
             <p>1. 本規約は、利用者と当方との間の本システムの利用に関わる一切の関係に適用されるものとします。</p>
